Sun Feb 19 22:40:58 CET 2006 Daniel Veillard <daniel@veillard.com>

	* doc/xsltproc.1 doc/xsltproc.xml: improvement of the man page
	  by Daniel Leidert, c.f. #331779

Sat Feb 11 13:10:01 CET 2006 Daniel Veillard <daniel@veillard.com>

	* libxslt/xsltutils.c: fix xsltSaveResultToString comment
	* libxslt/transform.c: detect loops when computing variables, should
	  fix bug #330772
	* doc/xsltproc.xml doc/xsltproc.1: fix typo in man page
	* tests/namespaces/tst7.out tests/general/bug-152.out: small output
	  changes due to libxml2 xhtml meta handling modification

Mon Nov 21 12:22:21 CET 2005 Daniel Veillard <daniel@veillard.com>

	* libexslt/date.c: Albert Chin found another signed/unsigned problem
	  in the date and time code raised on IRIX 6.5

Mon Nov 21 12:08:05 CET 2005 Daniel Veillard <daniel@veillard.com>

	* libexslt/crypto.c: patch from Albert Chin needed for HP-UX
	  which doesn't have <sys/select.h>

Mon Nov 21 12:05:41 CET 2005 Daniel Veillard <daniel@veillard.com>

	* libexslt/date.c: Albert Chin posted a patch to fix a problem on
	  Solaris with dates, extended bitfield size too to match libxml2
	  code from xmlschemastypes.c

Wed Nov 16 12:47:25 CET 2005 Daniel Veillard <daniel@veillard.com>

	* libexslt/functions.c: fix an problem raised by Ralf Junker in the
	  use of xmlHashScanFull() fixes bug #321582
	
Sun Nov  6 19:22:45 CET 2005 Daniel Veillard <daniel@veillard.com>

	* libxslt/attrvt.c: added a missing parameter to a debug function

Tue Oct  4 20:37:09 HKT 2005 William Brack <wbrack@mmm.com.hk>

	* libexslt/date.c: applied fix to date:week-in-year posted to
	  the mailing list by Thomas Broyer
	* tests/exslt/date/date.1.out, tests/exslt/date/datetime.1.out:
	  updated to reflect above fix

Sun Oct  2 11:52:44 CEST 2005 Daniel Veillard <daniel@veillard.com>

	* configure.in libxslt/Makefile.am libxslt/xsltconfig.h.in
	  libxslt.spec.in tests/plugins/Makefile.am xslt-config.in: applied
	  patch from Joel Reed to ease plugin integration
